[gd_scene load_steps=4 format=3 uid="uid://dcoq5vj54vhpb"]

[ext_resource type="Script" path="res://player.gd" id="1_nfbmq"]
[ext_resource type="Script" path="res://world.gd" id="1_xo8v8"]
[ext_resource type="Texture2D" uid="uid://d2upop6g2vg5k" path="res://player.png" id="3_2tho7"]

[node name="World" type="Node2D"]
script = ExtResource("1_xo8v8")

[node name="HealthBarEmpty" type="ColorRect" parent="."]
offset_right = 200.0
offset_bottom = 30.0

[node name="HealthBar" type="ColorRect" parent="."]
offset_right = 200.0
offset_bottom = 30.0
color = Color(1, 0, 0, 1)

[node name="Button" type="Button" parent="."]
offset_left = 20.0
offset_top = 98.0
offset_right = 92.0
offset_bottom = 129.0
text = "Damage"

[node name="Player" type="CharacterBody2D" parent="."]
position = Vector2(175, 108)
script = ExtResource("1_nfbmq")

[node name="Sprite2D" type="Sprite2D" parent="Player"]
texture = ExtResource("3_2tho7")

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="health_changed" from="Player" to="." method="_set_HealthBar_size"]
